crates/othello-tui/tests/snapshots/snapshot__observe_initial_8x8.snap
---
source: crates/othello-tui/tests/snapshot.rs
assertion_line: 55
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────┐
│rs-othello-sim v0.1.0    [Mode: Observe]    [Move 0/0]                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Board ───────────────────────────────┐┌ Game Info ───────────────────────────┐
│   a b c d e f g h                    ││Black: 2  White: 2                    │
│ 1  .  .  .  .  .  .  .  .            ││Side: Black                           │
│ 2  .  .  .  .  .  .  .  .            ││Last: -                               │
│ 3  .  .  .  .  .  .  .  .            ││Observe (Space=step, a=auto,          │
│ 4  .  .  .  O  X  .  .  .            │└──────────────────────────────────────┘
│ 5  .  .  .  X  O  .  .  .            │┌ Move History ────────────────────────┐
│ 6  .  .  .  .  .  .  .  .            ││                                      │
│ 7  .  .  .  .  .  .  .  .            ││                                      │
│ 8  .  .  .  .  .  .  .  .            │└──────────────────────────────────────┘
│                                      │┌ Players ─────────────────────────────┐
│                                      ││Black: MctsPlayer                     │
│                                      ││White: RandomPlayer                   │
│                                      │└──────────────────────────────────────┘
│                                      │┌ Evaluator ───────────────────────────┐
│                                      ││Evaluator: N/A                        │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Keys: [Space] step  [a] auto-play  [+/-] delay  [q] quit                      │
└──────────────────────────────────────────────────────────────────────────────┘
