crates/othello-tui/tests/snapshots/snapshot__observe_with_evaluator.snap
---
source: crates/othello-tui/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────┐
│rs-othello-sim v0.1.0    [Mode: Observe]    [Move 0/0]                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Board ───────────────────────────────┐┌ Game Info ───────────────────────────┐
│   a b c d e f g h                    ││Black: 2  White: 2                    │
│ 1  .  .  .  .  .  .  .  .            ││Side: Black                           │
│ 2  .  .  .  .  .  .  .  .            ││Last: -                               │
│ 3  .  .  .  .  .  .  .  .            ││Observe ( Space=step, a=auto,         │
│ 4  .  .  .  O  X  .  .  .            │└──────────────────────────────────────┘
│ 5  .  .  .  X  O  .  .  .            │┌ Move History ────────────────────────┐
│ 6  .  .  .  .  .  .  .  .            ││                                      │
│ 7  .  .  .  .  .  .  .  .            ││                                      │
│ 8  .  .  .  .  .  .  .  .            │└──────────────────────────────────────┘
│                                      │┌ Players ─────────────────────────────┐
│                                      ││Black: MctsPlayer                     │
│                                      ││White: RandomPlayer                   │
│                                      │└──────────────────────────────────────┘
│                                      │┌ Evaluator ───────────────────────────┐
│                                      ││Source: MctsPlayer                    │
│                                      ││c5   [#####   ] 0.620                 │
│                                      ││d6   [####    ] 0.480                 │
│                                      ││e6   [##      ] 0.310                 │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Keys: [Space] step  [a] auto-play  [+/-] delay  [q] quit                      │
└──────────────────────────────────────────────────────────────────────────────┘
