crates/othello-tui/tests/snapshots/snapshot__play_initial_8x8.snap
---
source: crates/othello-tui/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────┐
│rs-othello-sim v0.1.0    [Mode: Play]    [Move 0/0]                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Board ───────────────────────────────┐┌ Game Info ───────────────────────────┐
│   a b c d e f g h                    ││Black: 2  White: 2                    │
│ 1  .  .  .  .  .  .  .  .            ││Side: Black                           │
│ 2  .  .  .  .  .  .  .  .            ││Last: -                               │
│ 3  .  .  .  .  .  .  .  .            ││Black to move                         │
│ 4  .  .  .  O  X  .  .  .            │└──────────────────────────────────────┘
│ 5  .  .  .  X [O] .  .  .            │┌ Move History ────────────────────────┐
│ 6  .  .  .  .  .  .  .  .            ││                                      │
│ 7  .  .  .  .  .  .  .  .            ││                                      │
│ 8  .  .  .  .  .  .  .  .            ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      │└──────────────────────────────────────┘
│                                      │┌ Players ─────────────────────────────┐
│                                      ││Black: Human                          │
│                                      ││White: Human                          │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Keys: [hjkl/arrows] move  [Enter/Space] place  [p] pass  [q] quit             │
└──────────────────────────────────────────────────────────────────────────────┘
