crates/othello-tui/tests/snapshots/snapshot__replay_after_d3.snap
---
source: crates/othello-tui/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────┐
│rs-othello-sim v0.1.0    [Mode: Replay]    [Move 1/1]                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Board ───────────────────────────────┐┌ Game Info ───────────────────────────┐
│   a b c d e f g h                    ││Black: 4  White: 1                    │
│ 1  .  .  .  .  .  .  .  .            ││Side: White                           │
│ 2  .  .  .  .  .  .  .  .            ││Last: d3                              │
│ 3  .  .  .  X  .  .  .  .            ││Move 0/1                              │
│ 4  .  .  .  X  X  .  .  .            │└──────────────────────────────────────┘
│ 5  .  .  .  X  O  .  .  .            │┌ Move History ────────────────────────┐
│ 6  .  .  .  .  .  .  .  .            ││                                      │
│ 7  .  .  .  .  .  .  .  .            ││                                      │
│ 8  .  .  .  .  .  .  .  .            ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      │└──────────────────────────────────────┘
│                                      │┌ Players ─────────────────────────────┐
│                                      ││Black: ?                              │
│                                      ││White: ?                              │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Keys: [<-/->] step  [0/$] start/end  [Space] auto-play  [q] quit              │
└──────────────────────────────────────────────────────────────────────────────┘
